@@ -63,6 +63,7 @@ Additions:
    * Add the feature for key events.
    * Add elm_access_action(), elm_access_action_cb_set()
    * Add elm_object_domain_part_text_translatable_set(), elm_object_item_domain_part_text_translatable_set().
+   * Support language,changed callback (Fileselector_Button, Fileselector Entry, Spinner.
 
 Improvements:
 
