@@ -1288,4 +1288,9 @@
 
         * Support language change for widget items (Ctxpopup, Hoversel,
         Naviframe, Diskselector, List, Menu, Segment_Control, Toolbar, Popup,
-        MultibuttonEntry)																 
+        MultibuttonEntry)
+
+2013-04-23  ChunEon Park
+
+        * Support language,changed callback (Fileselector_Button,
+        Fileselector Entry, Spinner
